# inventree-wled-locator

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/inventree_wled_locator/: WledPlugin.py  __init__.py
