
[build-system]
requires = ["setuptools", "wheel", "pyyaml"]
build-backend = "setuptools.build_meta"

[project]
name = "inventree-wled-locator"
version =  "0.2.0"
description="Use WLED to locate InvenTree StockLocations."
readme = "README.md"
license = {text = "MIT license"}
keywords = ["inventree", "inventree-plugin", "inventree-wled-locator"]
authors = [
    {name = "Matthias Mair", email =  "code@mjmair.com"}
]
classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Scientific/Engineering",
        'License :: OSI Approved :: MIT License',
]
requires-python=">=3.9"
dependencies = ['django', 'requests']

[project.optional-dependencies]
dev = ['twine', 'setuptools']

[project.urls]
"Repository" = "https://github.com/matmair/inventree-wled-locator"
"Bug Tracker" = "https://github.com/matmair/inventree-wled-locator/issues"

[project.entry-points."inventree_plugins"]
inventree_wled_locator = "inventree_wled_locator:WledPlugin"

[tool.setuptools.packages.find]
where = ["src"]
